; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/bc/extr_tty.c_settty.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/bc/extr_tty.c_settty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.termios = type { i32 }

@TCSADRAIN = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@EINTR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.termios*)* @settty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @settty(%struct.termios* %0) #0 {
  %2 = alloca %struct.termios*, align 8
  %3 = alloca i32, align 4
  store %struct.termios* %0, %struct.termios** %2, align 8
  br label %4

4:                                                ; preds = %15, %1
  %5 = load i32, i32* @TCSADRAIN, align 4
  %6 = load %struct.termios*, %struct.termios** %2, align 8
  %7 = call i32 @tcsetattr(i32 0, i32 %5, %struct.termios* %6)
  store i32 %7, i32* %3, align 4
  %8 = icmp eq i32 %7, -1
  br i1 %8, label %9, label %13

9:                                                ; preds = %4
  %10 = load i64, i64* @errno, align 8
  %11 = load i64, i64* @EINTR, align 8
  %12 = icmp eq i64 %10, %11
  br label %13

13:                                               ; preds = %9, %4
  %14 = phi i1 [ false, %4 ], [ %12, %9 ]
  br i1 %14, label %15, label %16

15:                                               ; preds = %13
  br label %4

16:                                               ; preds = %13
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @tcsetattr(i32, i32, %struct.termios*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
